--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Signika Negative', sans-serif;
+    /* overflow: hidden; */
 }
 
 a {
@@ -24,4 +25,19 @@ h6,
 p {
     margin: 0px;
     padding: 0px;
+}
+.Toastify__toast {
+    max-width: 90% !important;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px / 13px !important;
+    padding: 10px !important;
+    margin-top: 20px !important;
+}
+.Toastify__toast-body {
+    font-size: 12px;
+    width: 100% !important;
+    font-weight: 500 !important;
+    margin-left: 7px !important;
+    /* padding: 0px !important; */
 }
